<resources>
    <string name="app_name">My App Portfoilo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="screen_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
</resources>
