<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/screen_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:textColor="#ff5680f8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:id="@+id/button5"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/button6"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

</RelativeLayout>
